[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Sprites/Bat.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Scripts/Bat.gd" type="Script" id=2]
[ext_resource path="res://Enemies/PlayerDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Global/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Global/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 32.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 7 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.99998
height = 30.0

[sub_resource type="Animation" id=5]
resource_name = "Default"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 10
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="PlayerDetector" parent="." instance=ExtResource( 3 )]

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 38 )
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -46 )
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="GroundDetector" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 100 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
playback_speed = 6.0
anims/Default = SubResource( 5 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetector"]
[editable path="Hurtbox"]
[editable path="HitBox"]
